# Plants-vs.-Zombies-Link-up-Game

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.bat  build_simple.bat  build_solution.md  gamewindow.cpp  gamewindow.h  git_commit.bat  linkjudger.cpp  linkjudger.h  main.cpp  resources.qrc  setup_git.bat  simpletest.cpp  simpletest.cpp.autosave  simpletest.h
log/: audio_removal_summary.md  experiment_reproducible_instruction_20241219_143000.md  experiment_reproducible_instruction_20241219_144500.md  experiment_reproducible_instruction_20241219_150000.md  experiment_reproducible_instruction_20241219_151500.md  experiment_reproducible_instruction_20241219_152500.md  experiment_reproducible_instruction_20241219_153000.md  experiment_reproducible_instruction_20241219_153500.md  experiment_reproducible_instruction_20241219_212000.md  experiment_reproducible_instruction_20241219_213000.md  experiment_reproducible_instruction_20241219_214000.md  experiment_reproducible_instruction_20241219_220000.md  experiment_reproducible_instruction_20241219_223000.md  experiment_reproducible_instruction_20241219_230000.md  experiment_reproducible_instruction_20250915.md
